Widget: Show widget name/addrs if fail to reparent

so we can more easily get an idea of where the problematic code is

https://gitlab.gnome.org/GNOME/gtk/issues/200